[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/reticle.png" type="Texture" id=1]
[ext_resource path="res://assets/box.png" type="Texture" id=2]
[ext_resource path="res://assets/vrc_osd_mono_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://HUD.gd" type="Script" id=4]

[node name="HUD" type="Control"]
modulate = Color( 1, 1, 1, 0.741176 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
margin_left = 295.0
margin_top = 155.0
margin_right = 345.0
margin_bottom = 205.0
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="CenterContainer"]
margin_left = 280.0
margin_top = 140.0
margin_right = 360.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 40, 40 )
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 630.0
margin_bottom = 350.0

[node name="FpsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 24.0
margin_bottom = 19.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.00392157, 0.921569, 0.372549, 1 )
text = "60"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 620.0
margin_bottom = 317.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 321.0
margin_right = 620.0
margin_bottom = 340.0

[node name="PosLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 308.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.00392157, 0.921569, 0.372549, 1 )
text = "00 00 00"

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 312.0
margin_right = 620.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 8
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.00392157, 0.921569, 0.372549, 1 )
text = "12:00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
